RESOLVED FIXED49666
[Gtk] "CRITICAL **: msg_got_headers_cb: assertion `entry' failed" when using HTTP cache
https://bugs.webkit.org/show_bug.cgi?id=49666
Summary [Gtk] "CRITICAL **: msg_got_headers_cb: assertion `entry' failed" when using ...
Sergio Villar Senin
Reported 2010-11-17 08:35:42 PST
People reported load errors when this critical is shown. It seems that clearing the cache helps, but it reappears later after some more browsing
Attachments
Fix for the bug (2.93 KB, patch)
2010-11-17 08:54 PST, Sergio Villar Senin
no flags
Fix for the bug (2.85 KB, patch)
2010-11-18 00:35 PST, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2010-11-17 08:54:20 PST
Created attachment 74120 [details] Fix for the bug The assumption was wrong. We were assuming that the HTTP cache was the only one generating conditional requests to the server for its cached resources. WebKit has its own in memory resource cache. It is capable of detecting when a resource needs to be revalidated and thus it can create conditional requests by itself. The problem was that the cache code was not considering that possibility, cache clients should be allowed to issue their own conditional requests. In those cases the cache should not do anything special, just return the resource as provided by libsoup.
Sergio Villar Senin
Comment 2 2010-11-17 08:55:38 PST
Adding Xan as he told me about this bug
Xan Lopez
Comment 3 2010-11-17 13:41:25 PST
Comment on attachment 74120 [details] Fix for the bug >+ taken that into account by taking the assumption that any possible taking that into account... making the assumption? >+ conditional request was always generated by itself. >+ >+ * platform/network/soup/cache/webkit/soup-cache.c: >+ (webkit_soup_cache_entry_remove): added an assertion >+ (msg_got_headers_cb): >+ Rest makes sense to me, thanks for tracking it down.
Sergio Villar Senin
Comment 4 2010-11-18 00:35:37 PST
Created attachment 74210 [details] Fix for the bug
Eric Seidel (no email)
Comment 5 2010-11-18 03:18:30 PST
Comment on attachment 74120 [details] Fix for the bug Cleared Xan Lopez's review+ from obsolete attachment 74120 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Xan Lopez
Comment 6 2010-11-18 06:26:17 PST
Comment on attachment 74210 [details] Fix for the bug r=me
Xan Lopez
Comment 7 2010-11-18 18:44:12 PST
Comment on attachment 74210 [details] Fix for the bug Clearing flags, seems this got stuck in cq.
Xan Lopez
Comment 8 2010-11-18 18:44:28 PST
Comment on attachment 74210 [details] Fix for the bug Hi?
WebKit Commit Bot
Comment 9 2010-11-19 04:33:07 PST
Comment on attachment 74210 [details] Fix for the bug Clearing flags on attachment: 74210 Committed r72378: <http://trac.webkit.org/changeset/72378>
WebKit Commit Bot
Comment 10 2010-11-19 04:33:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.