2010-11-19  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] "CRITICAL **: msg_got_headers_cb: assertion `entry' failed" when using HTTP cache
        https://bugs.webkit.org/show_bug.cgi?id=49666

        WebKit resource load cache does validate its own resources by
        issuing conditional requests to the server. The HTTP cache was
        making the assumption that any possible conditional request was
        always generated by itself.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_entry_remove): added an assertion
        (msg_got_headers_cb):

Canonical link: https://commits.webkit.org/62840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72378 268f45cc-cd09-0410-ab3c-d52691b4dbfc